--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -27,12 +27,16 @@
       <fieldset>
         <div class="sub-title">お客様情報</div>
         <div class="form-group">
-          <label for="customerName">氏名</label>
-          <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎" required/>
-        </div>
+          <div class="row">
+            <div class="col-4"><label for="customerName">氏名</label></div>
+            <div class="col-8"><input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎" required/></div>             
+          </div>
+      </div>
         <div class="form-group">
-          <label for="tel">連絡先TEL（-入れずに半角数字）</label>
-          <input type="tel" id="tel" name="tel" th:field="*{tel}" class="form-control" value="03-1234-5678" pattern="\d{9,11}" required/>
+          <div class="row">
+            <div class="col-4"><label for="tel">連絡先TEL（-入れずに半角数字）</label></div>
+            <div class="col-8"><input type="tel" id="tel" name="tel" th:field="*{tel}" class="form-control" value="03-1234-5678" pattern="\d{9,11}" required/></div>
+          </div>
         </div>
         <div class="form-group">
           <label for="email">連絡先メールアドレス</label>
